fix: player with js (SUT 23.09.24 00:46)

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
         <img src="img/cover1.jpg" alt="" class="img_player">
         <div class="buttons">
             <div class="name_and_button"> 
-                <div class="name-of-song">
-                    <span class="song">Umbrella</span>
-                    <span class="artist">Rihanna ft. Jay-Z</span>
+                <div class="song">
+                    <span >Umbrella Rihanna ft. Jay-Z</span>
                 </div>
                 <div class="pre-nex_button">
                     <button class="next"><img src="img/next1.png" alt="" class="img_button"></button>
@@ -31,5 +30,6 @@
     </div>
     <footer>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
