--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         </div>
     </div>
     <footer>
+        <img src="img/rss-logo.svg" alt="" class="img_logo">
+        <span>>>>>></span>
     </footer>
     <script src="script.js"></script>
 </body>
