--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <footer>
         <img src="img/rss-logo.svg" alt="" class="img_logo">
-        <span>>>>>></span>
+        <span>>>>>>>></span>
     </footer>
     <script src="script.js"></script>
 </body>
