--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
     </div>
     <footer>
-        <img src="img/rss-logo.svg" alt="" class="img_logo">
-        <span>>>>>>>></span>
+        <a href="https://rs.school/courses/javascript-preschool-ru" target="_blank"><img src="img/rss-logo.svg" alt="" class="img_logo"></a>
+        <a href="https://github.com/kokhanovskaya" class="github" target="_blank">kokhanovskaya</a>
     </footer>
     <script src="script.js"></script>
 </body>
